--- a/src/platnosci/zarzadzanie/ZarzadzaniePlatnosciaPanel.form
+++ b/src/platnosci/zarzadzanie/ZarzadzaniePlatnosciaPanel.form
@@ -280,6 +280,9 @@
           </Properties>
         </Component>
         <Component class="com.toedter.calendar.JDateChooser" name="terminPlatnosciDate">
+          <Properties>
+            <Property name="dateFormatString" type="java.lang.String" value="yyyy-MM-dd"/>
+          </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel4">
           <Properties>
@@ -294,6 +297,9 @@
           </Properties>
         </Component>
         <Component class="com.toedter.calendar.JDateChooser" name="dataZaplatyChooser">
+          <Properties>
+            <Property name="dateFormatString" type="java.lang.String" value="yyyy-MM-dd"/>
+          </Properties>
         </Component>
       </SubComponents>
     </Container>
