--- a/src/aplikacja/Okno.form
+++ b/src/aplikacja/Okno.form
@@ -4,43 +4,34 @@
   <NonVisualComponents>
     <Menu class="javax.swing.JMenuBar" name="menuBarMain">
       <SubComponents>
-        <Menu class="javax.swing.JMenu" name="naprawaMenu">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Naprawa"/>
-          </Properties>
-          <SubComponents>
-            <MenuItem class="javax.swing.JMenuItem" name="zapiszMenuItem">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="Zapisz"/>
-              </Properties>
-            </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="przegladajMenuItem">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="Przegl&#x105;daj"/>
-              </Properties>
-            </MenuItem>
-          </SubComponents>
-        </Menu>
-        <Menu class="javax.swing.JMenu" name="historiaMenu">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Historia"/>
-          </Properties>
-          <SubComponents>
-            <MenuItem class="javax.swing.JMenuItem" name="przegladajHistItem">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="Przegl&#x105;daj"/>
-              </Properties>
-            </MenuItem>
-          </SubComponents>
-        </Menu>
         <Menu class="javax.swing.JMenu" name="pracaMenu">
           <Properties>
             <Property name="text" type="java.lang.String" value="Praca"/>
           </Properties>
           <SubComponents>
+            <MenuItem class="javax.swing.JMenuItem" name="przegladajMenuItem">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Zapisz"/>
+              </Properties>
+            </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="pracaItem">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Praca"/>
+              </Properties>
+            </MenuItem>
+          </SubComponents>
+        </Menu>
+        <Menu class="javax.swing.JMenu" name="menuPlatnosci">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="P&#x142;atno&#x15b;ci"/>
+          </Properties>
+          <SubComponents>
+            <MenuItem class="javax.swing.JMenuItem" name="fakturaItem">
+              <Properties>
+                <Property name="accelerator" type="javax.swing.KeyStroke" editor="org.netbeans.modules.form.editors.KeyStrokeEditor">
+                  <KeyStroke key="F1"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="Faktury"/>
               </Properties>
             </MenuItem>
           </SubComponents>
@@ -79,21 +70,6 @@
             </MenuItem>
           </SubComponents>
         </Menu>
-        <Menu class="javax.swing.JMenu" name="jMenu1">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="P&#x142;atno&#x15b;ci"/>
-          </Properties>
-          <SubComponents>
-            <MenuItem class="javax.swing.JMenuItem" name="fakturaItem">
-              <Properties>
-                <Property name="accelerator" type="javax.swing.KeyStroke" editor="org.netbeans.modules.form.editors.KeyStrokeEditor">
-                  <KeyStroke key="F1"/>
-                </Property>
-                <Property name="text" type="java.lang.String" value="Faktury"/>
-              </Properties>
-            </MenuItem>
-          </SubComponents>
-        </Menu>
         <Menu class="javax.swing.JMenu" name="wylogujMenu">
           <Properties>
             <Property name="text" type="java.lang.String" value="Wyloguj"/>
@@ -112,12 +88,9 @@
     </Menu>
   </NonVisualComponents>
   <Properties>
-    <Property name="defaultCloseOperation" type="int" value="3"/>
-    <Property name="title" type="java.lang.String" value="Baks - warsztat motocyklowy"/>
+    <Property name="defaultCloseOperation" type="int" value="0"/>
+    <Property name="title" type="java.lang.String" value="BAK&apos;s - WARSZTAT MOTOCYKLOWY"/>
     <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[1024, 700]"/>
-    </Property>
-    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[1024, 700]"/>
     </Property>
   </Properties>
@@ -136,6 +109,7 @@
     <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
     <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
+    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,1,44,0,0,1,-112"/>
   </AuxValues>
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout"/>
